[package]
name = "tcp_connections"
version = "0.1.0"
authors = ["Aleksandrov Vladimir <invis87@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
netstat2 = "0.8"
tui = {version = "0.8.0", features = ["termion"]}
termion = "1.5.5"
failure = "0.1.7"
sysinfo = "0.12.0"
